apps/arr/maintainerr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/name: maintainerr
